Update latest BTMS schema to pull in UpdatedEntity field
