# tools/SchemaToCSharp/Meta.cs
@@ -14,6 +14,10 @@ internal static class Meta
                 { "Updated", "Date when the notification was last updated" },
                 { "CreatedSource", "Date when the notification was created in IPAFFS" },
                 { "UpdatedSource", "Date when the notification was last updated in IPAFFS" },
+                {
+                    "UpdatedEntity",
+                    "Date when the notification was updated or when related data was linked or updated"
+                },
             }
         },
         {
@@ -24,6 +28,7 @@ internal static class Meta
                 { "Updated", "Date when the movement was last updated" },
                 { "CreatedSource", "Date when the movement was created in ALVS" },
                 { "UpdatedSource", "Date when the movement was last updated in ALVS" },
+                { "UpdatedEntity", "Date when the movement was updated or when related data was linked or updated" },
             }
         },
     };
